--- a/teste/banking/src/main/resources/application.properties
+++ b/teste/banking/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username = root
 spring.datasource.password = mysql
 
 # configurando o banco que criamos
-spring.datasource.url = jdbc:mysql://localhost:3306/projeto?useTimezone=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/desafio_final?useTimezone=true&serverTimezone=UTC
 
 # configurando o dialeto
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
